[gd_scene load_steps=13 format=3 uid="uid://btqemfn0kg4i2"]

[ext_resource type="Script" uid="uid://s87k2qfp0jqw" path="res://Scripts/Player.gd" id="1_kpjcp"]
[ext_resource type="PackedScene" uid="uid://co4givesqwyy5" path="res://Sceens/Pause Menu.tscn" id="2_kne1u"]
[ext_resource type="AudioStream" uid="uid://cyerudp1mx658" path="res://Sounds/SFX/walk1.wav" id="3_cxr5p"]
[ext_resource type="AudioStream" uid="uid://b1qkbo3s8yrq" path="res://Sounds/SFX/Jump1.wav" id="4_e80uo"]
[ext_resource type="AudioStream" uid="uid://cwkdp1d4u5nrc" path="res://Sounds/SFX/sprint1.wav" id="4_tdg3f"]

[sub_resource type="Animation" id="Animation_tir5b"]
resource_name = "FovIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:fov")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [85.0, 75.0]
}

[sub_resource type="Animation" id="Animation_41hay"]
resource_name = "FovOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:fov")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [75.0, 85.0]
}

[sub_resource type="Animation" id="Animation_egxsg"]
resource_name = "Headbob"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.1, 0, 0), Vector3(0, -0.1, 0), Vector3(0.1, 0, 0), Vector3(0, -0.1, 0)]
}

[sub_resource type="Animation" id="Animation_oy8aj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.1, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:fov")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [85.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41hay"]
_data = {
&"FovIn": SubResource("Animation_tir5b"),
&"FovOut": SubResource("Animation_41hay"),
&"Headbob": SubResource("Animation_egxsg"),
&"RESET": SubResource("Animation_oy8aj")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_e80uo"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cxr5p"]
points = PackedVector3Array(-0.12520654, -0.532801, -0.4805069, 0.022783129, 0.4760704, 0.49888408, 0.16971254, 0.5591441, 0.46417162, 0.23105091, -0.8035912, 0.32045516, 0.40741014, 0.651043, -0.24352328, -0.4827893, 0.59484255, 0.082213186, -0.3628679, -0.68231165, 0.2896967, 0.46904355, -0.65452886, -0.06627126, -0.12744367, 0.8427015, -0.33810276, -0.39343542, -0.6839421, -0.24471663, 0.43825462, 0.62330925, 0.20084947, 0.0841477, 0.977454, 0.11479468, -0.06820232, -0.9764576, -0.12927033, 0.20054972, -0.56312895, -0.4514544, -0.18552664, 0.59545326, -0.4534751, -0.27336287, 0.59226835, 0.40775412, -0.0069364863, -0.47682306, 0.49966025, 0.37582088, -0.5886136, 0.31695515, 0.111579016, 0.5630594, -0.48117727, -0.41725034, 0.5278656, -0.27049688, -0.48454633, -0.59697217, -0.06650971, -0.27974695, 0.90856135, 0.05333608, -0.25019687, -0.8807117, 0.20531891, 0.263647, -0.90277094, -0.1273943, 0.29336792, 0.8715263, -0.15719566, 0.3734115, -0.5263189, -0.32824618, 0.4996626, 0.47664148, -0.0068885577, 0.053105574, 0.8750009, 0.32470253, -0.15454252, -0.5908538, 0.4658794, -0.09727988, -0.7823577, -0.39818847, -0.3876489, -0.49817133, 0.31564978, -0.30067965, -0.58799505, -0.38890144)

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_kpjcp")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5490103, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, 0)
fov = 85.0

[node name="PauseMenu" parent="Head/Camera3D" instance=ExtResource("2_kne1u")]
visible = false
offset_left = -575.5
offset_top = -323.90707
offset_right = 575.5
offset_bottom = 323.90707

[node name="animations" type="AnimationPlayer" parent="Head"]
libraries = {
&"": SubResource("AnimationLibrary_41hay")
}

[node name="FovAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
&"": SubResource("AnimationLibrary_41hay")
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_e80uo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_cxr5p")

[node name="Walk" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.012, -1, 0)
stream = ExtResource("3_cxr5p")
volume_db = -15.0
bus = &"SFX"

[node name="Sprint" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = ExtResource("4_tdg3f")
volume_db = -15.0
bus = &"SFX"

[node name="Jump1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_e80uo")
volume_db = -15.0
bus = &"SFX"
